Check whether we can get a library hook before returning it